syntax = "proto3";
package opennlp;

option java_package = "edu.uw.bhi.bionlp.covid.parser.opennlp";

service OpenNLP {
    rpc DetectSentences (SentenceDetectionInput) returns (SentenceDetectionOutput) {}
}

/*
 * Sentence
 */
 message Sentence {
    int32 id = 1;
    int32 begin_char_index = 2;
    int32 end_char_index = 3;
    string text = 4;
}

message SentenceDetectionInput {
    string text = 1;
}

message SentenceDetectionOutput {
    repeated Sentence sentences = 1;
}